# analyse-legislatives-2024

./: .gitignore  LICENSE  README.md  pyproject.toml
data/insee/: circonscriptions_legislatives_030522.dbf  circonscriptions_legislatives_030522.shx  indic-stat-circonscriptions-legislatives-2022.xlsx
data/legislatives2024/: party_to_political_trend.json
data/legislatives2024/computed/: data.csv
data/legislatives2024/raw/: legislatives-2024-candidatures-france-entiere-tour-2-2024-07-03-15h37.csv  lg2024-resultats-circonscriptions-une-ligne-par-candidat2.csv  lg2024-resultats-circonscriptions-une-ligne-par-candidat2.xlsx
notebooks/: 1-modelisation.html  1-modelisation.ipynb  sandbox.ipynb
src/analyse_legislatives/: circonscription.py  model.py  utils.py
